<resources>
    <string name="alert_comment_discuss_ok">确定</string>
    <string name="app_name">京东</string>
    <string name="back_to_jd">返回京东</string>
    <string name="camera_hint">请选择照片</string>
    <string name="camera_hint_message">您的手机没有安装SD卡，请安装SD卡后重试！</string>
    <string name="camera_hint_title">打开相机失败</string>
    <string name="cancel">取消</string>
    <string name="error_open_m_page">暂时无法打开此页面，请稍后重试</string>
    <string name="load_more_error">载入失败 点击重试</string>
    <string name="load_more_loading">载入中…</string>
    <string name="load_more_reach_end">已加载全部数据</string>
    <string name="more">更多</string>
    <string name="off_network">网络请求失败，请检查您的网络设置</string>
    <string name="pull_to_refresh_header_hint_loading">@string/pushmsg_center_load_more_ongoing_text</string>
    <string name="pull_to_refresh_header_hint_normal">@string/pushmsg_center_pull_down_text</string>
    <string name="pull_to_refresh_header_hint_normal2">上拉可以刷新</string>
    <string name="pull_to_refresh_header_hint_ready">松开后刷新</string>
    <string name="pull_to_refresh_header_last_time">@string/pushmsg_center_pull_down_update_time</string>
    <string name="pull_to_refresh_header_title_text">让购物更便捷</string>
    <string name="pull_to_refresh_no_more_data">@string/pushmsg_center_no_more_msg</string>
    <string name="qq_no_install">您未安装QQ客户端，无法进行分享。</string>
    <string name="qzone_no_install">您未安装QQ空间客户端，无法进行分享。</string>
    <string name="share_at_jingdong">\@京东</string>
    <string name="share_cancel">分享取消</string>
    <string name="share_cant_empty">分享内容不能为空</string>
    <string name="share_default_iconurl">http://img30.360buyimg.com/mobilecms/jfs/t1042/326/466525053/10993/361de7f5/5526521fNdc6b202c.png</string>
    <string name="share_defaut_summary">我在京东有大发现，绝对适合你，速来围观→_→</string>
    <string name="share_failed">分享失败</string>
    <string name="share_success">分享成功</string>
    <string name="share_to">分享到:</string>
    <string name="share_to_qq_friends">QQ好友</string>
    <string name="share_to_qzone">QQ空间</string>
    <string name="share_to_weibo">新浪微博</string>
    <string name="share_to_wx_friends">微信好友</string>
    <string name="share_to_wx_friends_circle">微信朋友圈</string>
    <string name="share_wx_no_install">抱歉，您尚未安装微信。</string>
    <string name="share_wx_no_support">请升级微信到最新版本使用。</string>
    <string name="upgrade_setup_cancle">下次再说</string>
    <string name="upgrade_setup_confirm">立即安装</string>
    <string name="weibo_can_not_share">您未安装新浪微博客户端或者版本太旧，无法进行分享。</string>
    <string name="BankName">开户银行：</string>
    <string name="OrderStatusShow_cancel">取消</string>
    <string name="OrderStatusShow_finish">完成</string>
    <string name="OrderStatusShow_needpay">等待付款</string>
    <string name="RMB">￥</string>
    <string name="accept_agreement">同意，</string>
    <string name="account_and_safe">账户与安全</string>
    <string name="account_balance">帐户余额</string>
    <string name="action_settings">设置</string>
    <string name="activities_all_event">全部活动</string>
    <string name="activities_get_detail_fail">活动详情拉取失败，请稍后再试！</string>
    <string name="activities_get_list_fail">商品列表拉取失败，请稍后再试！</string>
    <string name="activities_icon_top">置顶</string>
    <string name="activities_like_fail">点赞失败，请稍后再试！</string>
    <string name="activities_like_repeat">你已经赞过这个活动咯！</string>
    <string name="activities_list_fail">列表拉取失败，请稍后再试！</string>
    <string name="activities_menu_fail">分类拉取失败，请稍后再试！</string>
    <string name="activities_other_event">更多精彩活动</string>
    <string name="activities_wan">万</string>
    <string name="add_easy_buy_btn">添加轻松购</string>
    <string name="add_easy_buy_continue">继续添加</string>
    <string name="add_easy_buy_failure">添加轻松购不成功，请检查您填的信息是否正确，或者轻松购地址是否过多</string>
    <string name="add_easy_buy_success">添加轻松购成功</string>
    <string name="add_easy_buy_title">轻松购设置</string>
    <string name="add_random">添加一注机选</string>
    <string name="add_shouxuan">添加手选号码</string>
    <string name="add_to_basket_success">成功加入号码篮</string>
    <string name="add_to_cart">加入号码篮</string>
    <string name="add_to_cart_faile">啊哦，商品太抢手已经卖完了…您要不再逛逛其他商品？</string>
    <string name="add_to_cart_success">加入购物车操作成功</string>
    <string name="after_cut">砍后价:</string>
    <string name="alert_camera_choose">请选择</string>
    <string name="alert_comment_hint_message">"抱歉，您不能对该商品进行评价，原因是：
1.同一订单或相隔15日内不同订单中的相同商品，只能评价一次
2.购买时间已超过180天
3.商品已退货成功
4.可能没有在京东购买过该商品"</string>
    <string name="alert_dialog_msg_clean_basket">您确定要清空所有已选号码吗？</string>
    <string name="alert_dialog_title_warning">警告</string>
    <string name="alert_discuss_image_message">为了保证您手机的正常使用，只能晒三张以内的图片</string>
    <string name="alert_message_barcode_cant_copy">您的操作系统版本太低，暂时不支持剪切板</string>
    <string name="alert_message_barcode_clear">确认清空扫描记录？</string>
    <string name="alert_message_barcode_copyed">条码内容已经复制到剪切板</string>
    <string name="alert_message_empty_content">内容为空！</string>
    <string name="alert_message_invalid_url">此链接无效！</string>
    <string name="alert_message_no_scan">抱歉，此机型暂不支持通过摄像头进行条码扫描，请手动输入条码。</string>
    <string name="alert_message_open_external_url">可能存在风险，是否打开此链接？</string>
    <string name="alert_message_poor_network">您当前的网络情况不佳，请稍后再次尝试。</string>
    <string name="alert_message_poor_network2">这位客官，网络不给力啊。请检查一下您的网络，重新加载吧！</string>
    <string name="alert_message_scanning">识别中...</string>
    <string name="alert_message_wrong_file_select">您选择的文件无效，请重新选择！</string>
    <string name="alert_title_barcode_clear">清空历史</string>
    <string name="alert_title_poor_network">网络不佳</string>
    <string name="always_finish_activities">由于您已开启\"不保留活动\"，导致京东部分功能无法正常使用。我们建议您点击左下方\"设置\"按钮，在\"开发者选项\"中关闭\"不保留活动\"功能。</string>
    <string name="announced_winning_lottery">开奖公告</string>
    <string name="app_error_checkbox">提交后重启</string>
    <string name="app_error_close">关闭</string>
    <string name="app_error_msg">应用出错 ,即将关闭。</string>
    <string name="app_error_submit">提交</string>
    <string name="app_error_tag_close">已发送，应用已关闭...</string>
    <string name="app_error_tag_des">您可将联系方式（QQ、邮箱、手机）和出错情况提交给我们，以帮助改善软件质量，京东感谢您的支持与协助。</string>
    <string name="app_error_tag_hint">请在此填写联系方式和出错情况</string>
    <string name="app_error_tag_restart">已发送，自动重启中...请稍后</string>
    <string name="app_error_tag_send">发送中</string>
    <string name="app_error_title">警告</string>
    <string name="appcenter_title_text">发现更多</string>
    <string name="appcenter_title_text2">百宝箱</string>
    <string name="available_use">可以使用</string>
    <string name="back_tip">点击“返回”将中断注册，确定返回？</string>
    <string name="bankAccount">银行账户：</string>
    <string name="bank_card_change_phone_tips">如果您更换了银行预留手机号，请先解除绑定，并在收银台付款时重新绑定</string>
    <string name="bank_card_detail">银行卡详情</string>
    <string name="bank_card_holder_name">持卡人姓名：</string>
    <string name="bank_card_holder_phone">银行预留手机号：</string>
    <string name="bank_card_no_data_msg">您还未开通快捷支付！</string>
    <string name="bank_card_no_data_submsg">您可以在收银台支付时绑定银行卡并完成付款。</string>
    <string name="bank_card_unbind">解除绑定</string>
    <string name="bank_card_unbind_dialog_msg">您确定要解除绑定该银行卡吗？</string>
    <string name="bank_card_unbind_fail">解除失败，请重试</string>
    <string name="bank_card_unbind_succ">解除成功</string>
    <string name="barcode_barcode_no_text">商品号:</string>
    <string name="barcode_input_button">输入条码</string>
    <string name="barcode_input_manual">手动输入</string>
    <string name="barcode_input_switch_to_scan">切换扫码</string>
    <string name="barcode_input_tip_empty">请输入条码</string>
    <string name="barcode_input_title">输入二维码/条形码</string>
    <string name="barcode_no_data">暂无与此条码相关商品记录</string>
    <string name="barcode_scan_button">扫描条码</string>
    <string name="barcode_scan_copy_content">复制内容</string>
    <string name="barcode_scan_history_label">扫描记录：</string>
    <string name="barcode_scan_history_no">暂时没有扫描记录</string>
    <string name="barcode_scan_multi_products_title">多个商品</string>
    <string name="barcode_scan_open_in_external_browser">在浏览器中打开</string>
    <string name="barcode_scan_order_error">暂无与此条码相关订单信息</string>
    <string name="barcode_scan_order_ok">订单信息</string>
    <string name="barcode_scan_text_content_title">文本</string>
    <string name="barcode_scan_text_find_in_pictures">从相册找</string>
    <string name="barcode_scan_text_input_barcode">输入条码</string>
    <string name="barcode_scan_text_loginin">扫码登录</string>
    <string name="barcode_scan_text_qr_content_title">二维码内容</string>
    <string name="barcode_scan_text_title">二维码/条形码</string>
    <string name="btn_install_text">安装</string>
    <string name="btn_pause_text">暂停</string>
    <string name="btn_resume_text">继续</string>
    <string name="camera_correction_hint_des">商品名称</string>
    <string name="camera_correction_hint_price">商品价格，可不填</string>
    <string name="camera_correction_tag_categroy">商品类别：</string>
    <string name="camera_correction_tag_des">商品名称：</string>
    <string name="camera_correction_tag_price">商品价格：</string>
    <string name="cancle">取消</string>
    <string name="change_personal_info_message">"【说明】

 1.为了避免您中奖后无法领奖，请您填写与真实姓名及身份信息完全一致的资料。

2.由于一个京东账户只能绑定一个真实信息进行购彩及中奖奖金领取，请确保本账户是您本人使用！

3.依据财政部《彩票发行与销售管理暂行规定》未满18岁不得购买彩票！"</string>
    <string name="fast_operation_select_all">全</string>
    <string name="fast_operation_select_big">大</string>
    <string name="fast_operation_select_even">偶</string>
    <string name="fast_operation_select_odd">奇</string>
    <string name="fast_operation_select_small">小</string>
    <string name="host_set_string">gw服务器</string>
    <string name="identity_card">身份证号：</string>
    <string name="install_app_download_progress_text">0%</string>
    <string name="lib_story_img_select_browsed">浏览过</string>
    <string name="lib_story_img_select_buyed">已购买</string>
    <string name="lib_story_img_select_collected">已关注</string>
    <string name="lib_story_img_select_shopping">购物车</string>
    <string name="lottery_mobile">手机号码：</string>
    <string name="lottery_real_name">真实姓名：</string>
    <string name="menu_about">关于</string>
    <string name="menu_exit">退出</string>
    <string name="menu_feedback">意见反馈</string>
    <string name="menu_history">浏览记录</string>
    <string name="menu_lightmode_title">亮度调节</string>
    <string name="menu_setup">设置</string>
    <string name="mhost_set_string">m服务器</string>
    <string name="modify_personal_info">修改身份信息</string>
    <string name="msghost_set_string">消息服务器</string>
    <string name="network_tips_heading1">请设置你的网络</string>
    <string name="network_tips_heading2">如果你已经连接Wi-Fi网络</string>
    <string name="network_tips_part1">1.打开设备的“系统设置”>“无线和网络”>“移动网络”。</string>
    <string name="network_tips_part2">2.打开设备的“系统设置”>“WLAN”，“启动WLAN”后从中选择一个可用的热点连接。</string>
    <string name="network_tips_part3">请确认你所接入的Wi-Fi网络已经连入互联网，或者确认你的设备是否被允许访问该热点。</string>
    <string name="new_buy_ask">提交</string>
    <string name="newshishi_playtype_daxiaodanshuang">大小单双</string>
    <string name="newshishi_playtype_erxingzhixuan">二星直选</string>
    <string name="newshishi_playtype_erxingzuxuan">二星组选</string>
    <string name="newshishi_playtype_renxuaner">任选二</string>
    <string name="newshishi_playtype_renxuanyi">任选一</string>
    <string name="newshishi_playtype_sanxingzhixuan">三星直选</string>
    <string name="newshishi_playtype_sanxingzuliu">三星组六</string>
    <string name="newshishi_playtype_sanxingzusan">三星组三</string>
    <string name="newshishi_playtype_sixingzhixuan">四星直选</string>
    <string name="newshishi_playtype_wuxingtongxuan">五星通选</string>
    <string name="newshishi_playtype_wuxingzhixuan">五星直选</string>
    <string name="newshishi_playtype_yixingzhixuan">一星直选</string>
    <string name="none" />
    <string name="ok">确定</string>
    <string name="paihost_set_string">拍照购服务器</string>
    <string name="pg_new_feedback_contact">联系方式：</string>
    <string name="pg_new_feedback_contact_hint">您的姓名、手机号、邮箱等</string>
    <string name="pg_new_feedback_type_text_hint">请选择</string>
    <string name="plug_host">plug服务器</string>
    <string name="testmode_set_string">模拟数据(未经开发人员提示不要勾选)</string>
</resources>