<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/app_install_content_view_image" android:layout_width="40.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:src="@drawable/android_jd_notification" android:layout_alignParentLeft="true" android:contentDescription="@string/none" />
    <Button android:id="@id/app_install_content_view_pause_btn" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="3.0dip" android:text="@string/btn_pause_text" android:layout_alignParentRight="true" />
    <Button android:id="@id/app_install_content_view_continue_btn" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="3.0dip" android:text="@string/btn_resume_text" android:layout_alignParentRight="true" />
    <Button android:id="@id/app_install_content_view_install_btn" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="3.0dip" android:text="@string/btn_install_text" android:layout_alignParentRight="true" />
    <RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_toLeftOf="@id/app_install_content_view_continue_btn" android:layout_toRightOf="@id/app_install_content_view_image">
        <TextView android:id="@id/app_install_content_view_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/install_app_download_progress_text" android:layout_centerVertical="true" />
        <ProgressBar android:id="@id/app_install_content_view_progress" android:layout_width="fill_parent" android:layout_height="7.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="5.0dip" android:progress="0" android:layout_below="@id/app_install_content_view_text" style="?android:attr/progressBarStyleHorizontal" />
        <TextView android:id="@id/app_install_content_view_date" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
</RelativeLayout>