<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:stuan="http://schemas.android.com/apk/res-auto">
    <com.jingdong.common.widget.TempTitle android:id="@id/titlebar" android:layout_width="fill_parent" android:layout_height="wrap_content" stuan:drawableLeft="@drawable/common_title_back_selector" stuan:textTitle="@string/modify_personal_info" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:paddingLeft="14.0dip" android:paddingTop="20.0dip" android:paddingRight="14.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/text_size_tab_title" android:textColor="@color/text_gray" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lottery_real_name" />
                <com.jd.lottery.lib.ui.common.widget.JDThemeEditText android:id="@id/edit_info_name" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:paddingLeft="14.0dip" android:paddingTop="20.0dip" android:paddingRight="14.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/text_size_tab_title" android:textColor="@color/text_gray" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/identity_card" />
                <com.jd.lottery.lib.ui.common.widget.JDThemeEditText android:id="@id/edit_info_idcard" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:paddingLeft="14.0dip" android:paddingTop="20.0dip" android:paddingRight="14.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/text_size_tab_title" android:textColor="@color/text_gray" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lottery_mobile" />
                <com.jd.lottery.lib.ui.common.widget.JDThemeEditText android:id="@id/edit_info_mobile" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:background="@drawable/lottery_querenxinxi_bg" android:paddingLeft="10.0dip" android:paddingTop="20.0dip" android:paddingRight="10.0dip" android:paddingBottom="25.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="48.0dip" android:layout_marginRight="10.0dip">
                <TextView android:textSize="@dimen/text_size_tab_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/change_personal_info_message" />
                <RelativeLayout android:orientation="horizontal" android:id="@id/modify_persional_btn_panel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="28.0dip" android:layout_marginTop="23.0dip" android:layout_marginRight="28.0dip">
                    <TextView android:id="@id/modify_persional_btn_cancle" android:text="@string/cancle" style="@style/cancle_btn_style" />
                    <TextView android:id="@id/modify_persional_btn_ok" android:text="@string/ok" android:layout_alignParentRight="true" style="@style/ok_btn_style" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>